  * Sub-class Gtk.Builder to add get_object_ids method
  * partAdvanced.ui: Refactor advanced partitioning UI (LP: #1042642)
  * partAdvanced.ui: Add LVM & Crypto UI but hide by default
  * Activate the first option by default on the ask page (LP: #1043822)
  * Make the "Use LVM" checkbox visible by default (LP: #1042639)
  * Remove the experimental --enable-partauto-lvm, not needed anymore
  * Create gui/pixmaps -> ../pixmaps symlink, for unit-tests to find images (LP: #1003890)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Thu, 30 Aug 2012 18:45:25 +0100

ubiquity (2.11.24) quantal; urgency=low

  [ Dylan McCall ]
  * Tweaks to support ubiquity-slideshow's new file structure and parameter format (LP: #1035806)

  [ Dmitrijs Ledkovs ]
  * Automatic update of included source packages: netcfg 1.68ubuntu16.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Tue, 28 Aug 2012 18:07:08 +0100

ubiquity (2.11.23) quantal; urgency=low

  [ Luke Yelavich ]
  * Show the accessibility indicator in only-ubiquity as well.
  * Tweak the error message displayed when the accessibility indicator
    cannot be shown, to satisfy PEP tests.

  [ Colin Watson ]
  * Make ubiquity-frontend-gtk depend on the specific window managers
    supported by ubiquity-dm (LP: #1037515).
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu22, partman-auto-lvm 45ubuntu1, yaboot-installer
    1.1.22ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 23 Aug 2012 17:23:42 +0100

ubiquity (2.11.22) quantal; urgency=low

  [ Stéphane Graber ]
  * Fix ubiquity upstart job to use /etc/default/locale as the source of
    LANG and LANGUAGE instead of /etc/environment (LP: #1037001)

  [ Dmitrijs Ledkovs ]
  * Remove pictograms from the partAsk page
  * Make full disk encryption tickbox visible by default
  * Make the security key page layout centered and fixed
  * Automatic update of included source packages: partman-crypto
    54ubuntu1.
