@@ -7,14 +7,19 @@ ubiquity (2.11.25) UNRELEASED; urgency=low
   * Activate the first option by default on the ask page (LP: #1043822)
   * Make the "Use LVM" checkbox visible by default (LP: #1042639)
   * Remove the experimental --enable-partauto-lvm, not needed anymore
-  * Create gui/pixmaps -> ../pixmaps symlink, for unit-tests to find images (LP: #1003890)
+  * Create gui/pixmaps -> ../pixmaps symlink, for unit-tests
+    to find images (LP: #1003890)
+  * Adjust translations & unit-tests for the UI widget renames
+  * Add new strings for future advanced LVM & Crypto UI
+  * Update translation templates
 
  -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Thu, 30 Aug 2012 18:45:25 +0100
 
 ubiquity (2.11.24) quantal; urgency=low
 
   [ Dylan McCall ]
-  * Tweaks to support ubiquity-slideshow's new file structure and parameter format (LP: #1035806)
+  * Tweaks to support ubiquity-slideshow's new file structure and parameter
+    format (LP: #1035806)
 
   [ Dmitrijs Ledkovs ]
   * Automatic update of included source packages: netcfg 1.68ubuntu16.
